[wip][fix] (ABC-617): Fix bottom overflow

--- a/src/modules/base/kanban/kanban.css
+++ b/src/modules/base/kanban/kanban.css
@@ -342,17 +342,14 @@
     align-items: center;
 }
 
-.avonni-kanban_expandable_container
-    .avonni-kanban__field_container
-    .avonni-kanban_expandable_container
-    .avonni-kanban__tiles_container,
+.avonni-kanban__tiles_container,
 .avonni-kanban_expandable_container,
 .avonni-kanban__container_subgroups {
     height: 100%;
 }
 
 .avonni-kanban_expandable_container .avonni-kanban__field {
-    height: 100%
+    height: 100%;
 }
 
 .avonni-kanban_expandable_container {
@@ -372,6 +369,10 @@
 
 .avonni-kanban_expandable_container .avonni-kanban__tiles_container {
     overflow: hidden;
+}
+
+.avonni-kanban__expandable_section:last-of-type {
+    padding-bottom: 8rem;
 }
 
 .avonni-kanban__expandable_section_header {
